[project]
name = "dbclusters"
version = "1.0.0"
description = "Databricks cluster optimization code"
authors = [{name = "Aarni"}]
readme = "README.md"
requires-python = ">=3.7"

[project.urls] 
"Source" = "https://github.com/aarnisi/databricks_cluster_optimization/"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependencies]
databricks-connect = "~=12.2"
plotly = "~=5.6.0"
requests = "~=2.27.1"
json = "~=2.0.9"
pyspark = "~=3.3.2"
